added design and delete

--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_char_chooser.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_char_chooser.xml
@@ -38,7 +38,11 @@
             android:layout_height="wrap_content"
             android:text="@string/addNewChar_button"
 
+            android:background="@drawable/button_green"
+
             />
+
+
     </LinearLayout>
 </ScrollView>
 </RelativeLayout>
