--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/character_chooser_element.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/character_chooser_element.xml
@@ -1,31 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
+    android:paddingBottom="5dp"
+    android:layout_marginTop="5sp"
+    android:layout_marginBottom="5sp"
+    android:background="@drawable/character_bg_grey"
+    android:orientation="vertical"
     >
 
     <TextView
         android:id="@+id/charName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Will be replaced..."
+        android:layout_gravity="center"
+        android:text="@string/PlaceHolder_label"
+        android:textColor="@color/whiteText"
         android:textSize="20sp"
         />
     <TextView
         android:id="@+id/charDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Will be replaced..."
-        android:layout_below="@id/charName"
+        android:layout_gravity="center"
+        android:text="@string/PlaceHolder_label"
+        android:textColor="@color/whiteText"
         />
-    <Button
-        android:id="@+id/choose"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/choose_button"
-        android:layout_below="@id/charDetail"/>
+        android:orientation="horizontal">
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/delete_button"
+        android:layout_weight="1"
+        android:visibility="gone"
+        android:background="@drawable/button_red"
+        />
+        <Button
+            android:id="@+id/choose"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/choose_button"
+            android:layout_weight="3"
+            android:background="@drawable/button_blue"
+            />
+    </LinearLayout>
+
+</LinearLayout>
