--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_char_chooser.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_char_chooser.xml
@@ -34,6 +34,7 @@
 
             />
         <Button
+            android:id="@+id/addNewCharButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/addNewChar_button"
