--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_add_character.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_add_character.xml
@@ -19,14 +19,17 @@
             android:layout_height="wrap_content"
             android:text="@string/New_character_title"
             android:gravity="center|top"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:layout_weight="0.2"
             />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="10">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             >
 
 
@@ -40,69 +43,75 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/name_label"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10sp"
                     />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/surName_label"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10sp"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/Race_label"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10sp"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/Occupation_label"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10sp"/>
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
                 <EditText
                     android:id="@+id/newCharName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="10sp"
 
                     />
                 <EditText
                     android:id="@+id/newCharSurname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="10sp"
 
                     />
                 <EditText
                     android:id="@+id/newCharRace"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="10sp"
 
                     />
                 <EditText
                     android:id="@+id/newCharOccupation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="10sp"
 
                     />
             </LinearLayout>
 
         </LinearLayout>
+        </ScrollView>
         <TextView
             android:id="@+id/errorMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/PlaceHolder_label"
             android:layout_gravity="center"
-            android:textSize="30sp"
+            android:textSize="15sp"
             android:textColor="@color/Error"
             android:visibility="gone"
+            android:layout_weight="0.2"
             />
     <LinearLayout
         android:orientation="horizontal"
