--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/colors.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#666677</color>
+    <color name="colorPrimaryDark">#333333</color>
+    <color name="colorAccent">#eeeeee</color>
     <color name="Error">#ffff0000</color>
     <color name="characterBG">#444444</color>
     <color name="whiteText">#dddddd</color>
+    <color name="BlackText">#111111</color>
+    <color name="GrayText">#222222</color>
     <color name="okGreen">#00bb00</color>
+    <color name="Background">#bbbbbb</color>
 </resources>
