--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/styles.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/Background</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColorPrimary">@color/BlackText</item>
+        <item name="android:textColorSecondary">@color/GrayText</item>
+
     </style>
 
     <style name="AppTheme.NoActionBar">
