--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_login.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:weightSum="1">
+        >
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,15 +87,23 @@
             android:textColor="@color/Error"
             android:visibility="gone" />
 
-        <Button
-            android:layout_width="180dp"
+
+            </LinearLayout>
+        </ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/submit_button"
-            android:id="@+id/submitButton"
-            android:onClick="login"
-            android:layout_gravity="center_horizontal"
-             />
-
-
+            android:orientation="vertical"
+            android:layout_weight="1"
+            >
+            <Button
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="@string/submit_button"
+                android:id="@+id/submitButton"
+                android:onClick="login"
+                android:layout_gravity="center_horizontal|"
+                />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
