--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/dimens.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="basic_margin_left">10sp</dimen>
+    <dimen name="text_size">20sp</dimen>
 </resources>
