--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/character_chooser_element.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/character_chooser_element.xml
@@ -9,24 +9,50 @@
     android:background="@drawable/character_bg_grey"
     android:orientation="vertical"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical">
+            <TextView
+                android:id="@+id/charName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/PlaceHolder_label"
+                android:textColor="@color/whiteText"
+                android:textSize="20sp"
+                />
+            <TextView
+                android:id="@+id/charDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/PlaceHolder_label"
+                android:textColor="@color/whiteText"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/charImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/charName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/PlaceHolder_label"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
-        />
-    <TextView
-        android:id="@+id/charDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/PlaceHolder_label"
-        android:textColor="@color/whiteText"
-        />
+    </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
