--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/element_character_details.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/element_character_details.xml
@@ -9,12 +9,15 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/basic_margin_left"
         android:visibility="gone"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name_label"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/nameView"
@@ -26,12 +29,15 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/basic_margin_left"
         android:layout_height="wrap_content"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Race_label"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/raceView"
@@ -44,12 +50,15 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/basic_margin_left"
         android:layout_marginBottom="5sp"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Occupation_label"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/occupationView"
@@ -62,6 +71,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/basic_margin_left"
         android:layout_marginBottom="5sp"
         >
         <LinearLayout
@@ -74,6 +84,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/basic_margin_left"
+                android:layout_marginStart="@dimen/basic_margin_left"
                 android:text="@string/label_hp"
                 android:textSize="20sp"/>
             <TextView
@@ -125,18 +137,29 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/basic_margin_left"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_str"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
+            android:layout_gravity="center"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/strView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/PlaceHolder_label"
+            android:layout_gravity="center"
             android:textSize="20sp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
+            android:src="@drawable/str2"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -147,13 +170,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_dex"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/dexView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/PlaceHolder_label"
             android:textSize="20sp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
+            android:src="@drawable/dex2"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -164,13 +197,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_con"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/conView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/PlaceHolder_label"
             android:textSize="20sp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
+            android:src="@drawable/cons2"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -181,13 +224,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_int"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/intView"
             android:layout_width="wrap_content"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:text="@string/PlaceHolder_label"
             android:textSize="20sp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
+            android:src="@drawable/int2"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -198,13 +251,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_wis"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/wisView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/PlaceHolder_label"
             android:textSize="20sp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
+            android:src="@drawable/wis2"/>
     </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
@@ -216,73 +279,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_cha"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
             android:textSize="20sp"/>
         <TextView
             android:id="@+id/chaView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/PlaceHolder_label"
             android:textSize="20sp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/characterDetailsLayoutInv"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5sp"
-        >
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_inventory"
-            android:layout_gravity="center"
-            android:layout_weight="1.3"
-            android:textSize="20sp"/>
-        <TextView
-            android:id="@+id/invCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_short_placeHolder"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:textSize="20sp"/>
-        <Button
-            android:id="@+id/invButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_Manage"
-            android:textAllCaps="false"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5sp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_equipment"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:textSize="20sp"/>
-        <TextView
-            android:id="@+id/equipmentCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_short_placeHolder"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:textSize="20sp"/>
-        <Button
-            android:id="@+id/equButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_Manage"
-            android:textAllCaps="false"
-            android:layout_weight="1"
-            />
+            android:layout_marginLeft="@dimen/basic_margin_left"
+            android:layout_marginStart="@dimen/basic_margin_left"
+            android:src="@drawable/cha2"/>
     </LinearLayout>
 </LinearLayout>
