--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_main.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/activity_main.xml
@@ -47,13 +47,13 @@
 
                 </ScrollView>
 
-                <ScrollView
+                <LinearLayout
                     android:id="@+id/Inventory"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                </ScrollView>
+                </LinearLayout>
 
                 <ScrollView
                     android:id="@+id/Combat"
