--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/element_item_list.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/layout/element_item_list.xml
@@ -64,6 +64,13 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/item_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
